<?xml version="1.0"?>
<package format="2">
  <name>range_modules</name>
  <version>0.1.1</version>
  <description>
          A package for control of sensor_msgs::Range
  </description>
  <license>Apache 2.0</license>
  <author email="shotaro.akima01@g.softbank.co.jp">ashotaro</author>
  <maintainer email="shotaro.akima01@g.softbank.co.jp">ashotaro</maintainer>
    
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

</package>
